--- a/webpackDemo/src/stylus/index.styl
+++ b/webpackDemo/src/stylus/index.styl
@@ -1,4 +1,5 @@
 .box5 
     width 100px
     height 100px
-    background-color yellowgreen
+    background-image url('../images/3.gif')
+    background-size cover
