--- a/webpackDemo/src/css/index.css
+++ b/webpackDemo/src/css/index.css
@@ -1,5 +1,6 @@
 .box {
     width: 100px;
     height: 100px;
-    background-color: pink;
+    background-image: url('../images/1.jpeg');
+    background-size: 100px 100px;
 }
