--- a/webpackDemo/src/less/index.less
+++ b/webpackDemo/src/less/index.less
@@ -1,5 +1,6 @@
 .box2 {
     width: 100px;
     height: 100px;
-    background-color: deeppink;
+    background-image: url('../images/2.png');
+    background-size: cover;
 }
